Revision history for App-EUMM-Upgrade

        Perl::Meta is used
        Better reindentation when outer block is removed
        Better detection of exisiting BUILD_REQUIRES
        Better detection of version-checking constructs
        Better search for 'Perl' license
        Scan 'author' section for license
        Support for arrayref in 'AUTHOR'

0.22    2010-01-11
        Better detection of version-checking constructs
        Better search for 'Perl' license
        Better detection of indent type
        Other minor changes
        Docs about new EUMM features

0.21    2009-12-18
        First version released to CPAN