@@ -8,3 +8,4 @@ t/00-load.t
 t/pod.t
 Makefile.PL
 META.yml
+META.json
