@@ -7,6 +7,7 @@ Revision history for App-EUMM-Upgrade
         Better search for 'Perl' license
         Scan 'author' section for license
         Support for arrayref in 'AUTHOR'
+        Check for "package MY"
 
 0.22    2010-01-11
         Better detection of version-checking constructs
